salesforce/force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
  <label>Message</label>
  <pluralLabel>Messages</pluralLabel>
  <nameField>
    <label>Message Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>