salesforce/force-app/main/default/objects/Message__c/fields/Author__c.field-meta.xml
<CustomField>
  <fullName>Author__c</fullName>
  <label>Author</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Messages</relationshipLabel>
  <relationshipName>MessagesByAuthor</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>