salesforce/force-app/main/default/objects/Message__c/fields/ExternalMessageId__c.field-meta.xml
<CustomField>
  <fullName>ExternalMessageId__c</fullName>
  <label>External Message Id</label>
  <type>Text</type>
  <length>80</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <required>true</required>
</CustomField>