salesforce/force-app/main/default/objects/Message__c/fields/Flags__c.field-meta.xml
<CustomField>
  <fullName>Flags__c</fullName>
  <label>Flags</label>
  <type>Text</type>
  <length>255</length>
</CustomField>