salesforce/force-app/main/default/objects/Message__c/fields/Ride__c.field-meta.xml
<CustomField>
  <fullName>Ride__c</fullName>
  <label>Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Messages</relationshipLabel>
  <relationshipName>Messages</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>