salesforce/force-app/main/default/objects/Message__c/fields/SentAt__c.field-meta.xml
<CustomField>
  <fullName>SentAt__c</fullName>
  <label>Sent At</label>
  <type>DateTime</type>
</CustomField>