salesforce/force-app/main/default/objects/Message__c/fields/Text__c.field-meta.xml
<CustomField>
  <fullName>Text__c</fullName>
  <label>Text</label>
  <type>LongTextArea</type>
  <length>1000</length>
</CustomField>